@startuml

title __IMPROVE's Class Diagram__\n

  namespace com.atguigu.builder {
    namespace improve {
      class com.atguigu.builder.improve.Client {
          {static} + main()
      }
    }
  }
  

  namespace com.atguigu.builder {
    namespace improve {
      class com.atguigu.builder.improve.CommonHouse {
          + buildBasic()
          + buildWalls()
          + roofed()
      }
    }
  }
  

  namespace com.atguigu.builder {
    namespace improve {
      class com.atguigu.builder.improve.HighBuilding {
          + buildBasic()
          + buildWalls()
          + roofed()
      }
    }
  }
  

  namespace com.atguigu.builder {
    namespace improve {
      class com.atguigu.builder.improve.House {
          - base : String
          - roofed : String
          - wall : String
          + getBase()
          + getRoofed()
          + getWall()
          + setBase()
          + setRoofed()
          + setWall()
      }
    }
  }
  

  namespace com.atguigu.builder {
    namespace improve {
      abstract class com.atguigu.builder.improve.HouseBuilder {
          {abstract} + buildBasic()
          + buildHouse()
          {abstract} + buildWalls()
          {abstract} + roofed()
      }
    }
  }
  

  namespace com.atguigu.builder {
    namespace improve {
      class com.atguigu.builder.improve.HouseDirector {
          + HouseDirector()
          + constructHouse()
          + setHouseBuilder()
      }
    }
  }
  

  com.atguigu.builder.improve.CommonHouse -up-|> com.atguigu.builder.improve.HouseBuilder
  com.atguigu.builder.improve.HighBuilding -up-|> com.atguigu.builder.improve.HouseBuilder
  com.atguigu.builder.improve.HouseBuilder o-- com.atguigu.builder.improve.House : house
  com.atguigu.builder.improve.HouseDirector o-- com.atguigu.builder.improve.HouseBuilder : houseBuilder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
